--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="100dp"
     android:background="@android:color/holo_blue_dark"
     android:orientation="horizontal">
 
@@ -9,8 +9,8 @@
     <ImageButton
         android:id="@+id/close_btn"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_height="match_parent"
+        android:layout_margin="20dp"
         android:background="@android:color/transparent"
         app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
 
@@ -22,6 +22,6 @@
         android:layout_weight="1"
         android:gravity="center"
         android:textColor="@color/white"
-        android:textSize="20sp"/>
+        android:textSize="35sp"/>
 
 </LinearLayout>
