--- a/app/src/main/res/layout/list_item_buy.xml
+++ b/app/src/main/res/layout/list_item_buy.xml
@@ -15,13 +15,14 @@
             android:id="@+id/product"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:textSize="30sp"
             android:text="Cheese" />
 
         <TextView
             android:id="@+id/price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="20sp"
             android:text="Price: 5 coins" />
 
     </LinearLayout>
@@ -38,34 +39,37 @@
             android:orientation="horizontal">
 
             <ImageButton
-                android:id="@+id/imageButton4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:id="@+id/remove"
+                android:layout_width="40dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0"
                 android:background="@null"
                 app:srcCompat="@drawable/baseline_remove_24" />
 
             <TextView
                 android:id="@+id/number"
-                android:layout_width="30dp"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="0"
-                android:gravity="center" />
+                android:textSize="30sp"
+                android:gravity="center"
+                android:padding="8dp"
+                android:layout_margin="8dp" />
 
             <ImageButton
-                android:id="@+id/imageButton3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:id="@+id/add"
+                android:layout_width="40dp"
+                android:layout_height="match_parent"
                 android:background="@null"
                 app:srcCompat="@drawable/baseline_add_24" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/own"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Own: 10"
-            android:gravity="center" />
+<!--        <TextView-->
+<!--            android:id="@+id/own"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Own: 10"-->
+<!--            android:gravity="center" />-->
 
 
     </LinearLayout>
