--- a/app/src/main/res/layout/list_item_buy.xml
+++ b/app/src/main/res/layout/list_item_buy.xml
@@ -15,23 +15,23 @@
             android:id="@+id/product"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="30sp"
-            android:text="Cheese" />
+            android:text="Cheese"
+            android:textSize="30sp" />
 
         <TextView
             android:id="@+id/price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="Price: 5 coins" />
+            android:text="Price: 5 coins"
+            android:textSize="20sp" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@color/white">
+        android:background="@color/white"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -47,14 +47,14 @@
                 app:srcCompat="@drawable/baseline_remove_24" />
 
             <TextView
-                android:id="@+id/number"
+                android:id="@+id/counterTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="30sp"
+                android:layout_margin="8dp"
                 android:gravity="center"
                 android:padding="8dp"
-                android:layout_margin="8dp" />
+                android:text="0"
+                android:textSize="30sp" />
 
             <ImageButton
                 android:id="@+id/add"
@@ -64,12 +64,12 @@
                 app:srcCompat="@drawable/baseline_add_24" />
         </LinearLayout>
 
-<!--        <TextView-->
-<!--            android:id="@+id/own"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="Own: 10"-->
-<!--            android:gravity="center" />-->
+        <!--        <TextView-->
+        <!--            android:id="@+id/own"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:text="Own: 10"-->
+        <!--            android:gravity="center" />-->
 
 
     </LinearLayout>
