--- a/app/src/main/res/layout/activity_buy.xml
+++ b/app/src/main/res/layout/activity_buy.xml
@@ -48,7 +48,7 @@
             android:textSize="40sp" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/buyButton"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="Buy"
