added start screen and summary screen

--- a/app/src/main/res/layout/lang_exercise2_layout.xml
+++ b/app/src/main/res/layout/lang_exercise2_layout.xml
@@ -30,7 +30,7 @@
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.045" />
+        app:layout_constraintVertical_bias="0.037" />
 
     <View
         android:id="@+id/view2"
@@ -89,7 +89,7 @@
         app:layout_constraintVertical_bias="0.377" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/btn_audio"
         android:layout_width="46dp"
         android:layout_height="41dp"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
@@ -190,4 +190,16 @@
         app:layout_constraintStart_toStartOf="@+id/view2"
         app:layout_constraintTop_toBottomOf="@+id/btn_como"
         app:layout_constraintVertical_bias="0.894" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/view2"
+        app:layout_constraintEnd_toEndOf="@+id/view2"
+        app:layout_constraintHorizontal_bias="0.711"
+        app:layout_constraintStart_toStartOf="@+id/view2"
+        app:layout_constraintTop_toTopOf="@+id/view2"
+        app:layout_constraintVertical_bias="0.133"
+        app:srcCompat="@drawable/cow" />
 </androidx.constraintlayout.widget.ConstraintLayout>
