--- a/app/src/main/res/layout/lang_exercise3_layout.xml
+++ b/app/src/main/res/layout/lang_exercise3_layout.xml
@@ -30,7 +30,7 @@
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.045" />
+        app:layout_constraintVertical_bias="0.032" />
 
     <View
         android:id="@+id/view2"
@@ -65,7 +65,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:backgroundTint="#2F6532"
+        android:backgroundTint="#385A29"
         android:text="Continue"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
@@ -119,7 +119,7 @@
         app:layout_constraintVertical_bias="0.178" />
 
     <Button
-        android:id="@+id/button9"
+        android:id="@+id/btn_slow_down"
         android:layout_width="99dp"
         android:layout_height="53dp"
         android:backgroundTint="#4A4542"
@@ -134,7 +134,7 @@
         app:layout_constraintVertical_bias="0.088" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/iView_audio"
         android:layout_width="63dp"
         android:layout_height="49dp"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
