--- a/app/src/main/res/layout/activity_buy.xml
+++ b/app/src/main/res/layout/activity_buy.xml
@@ -3,14 +3,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/wooden_map"
     android:orientation="vertical"
     tools:context=".BuyActivity">
 
-    <include
-        android:id="@+id/header"
-        layout="@layout/header"
+    <FrameLayout
+        android:id="@+id/headerContainer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="90dp">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#70000000" />
+
+        <include
+            android:id="@+id/header"
+            layout="@layout/header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -37,7 +49,8 @@
             android:id="@+id/coinsText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Coins: +"
+            android:text="Coins: +"
+            android:textColor="@color/white"
             android:textSize="40sp" />
 
         <TextView
@@ -45,14 +58,22 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@color/white"
             android:textSize="40sp" />
 
-        <Button
+        <TextView
             android:id="@+id/buyButton"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
             android:text="Buy"
-            android:textSize="25sp" />
+            android:gravity="center"
+            android:textSize="25sp"
+            android:textColor="@color/white"
+            android:background="@drawable/wooden_tile_button"
+            />
+
 
     </LinearLayout>
 
