--- a/app/src/main/res/layout/list_item_buy.xml
+++ b/app/src/main/res/layout/list_item_buy.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="16dp">
+    android:padding="16dp"
+    >
 
     <LinearLayout
         android:layout_width="0dp"
@@ -16,21 +17,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Cheese"
-            android:textSize="30sp" />
+            android:textSize="30sp"
+            android:textColor="@color/white"/>
 
         <TextView
             android:id="@+id/price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Price: 5 coins"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textColor="@color/white"/>
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:background="@color/white"
         android:orientation="vertical">
 
         <LinearLayout
@@ -54,7 +56,8 @@
                 android:gravity="center"
                 android:padding="8dp"
                 android:text="0"
-                android:textSize="30sp" />
+                android:textSize="30sp"
+                android:textColor="@color/white"/>
 
             <ImageButton
                 android:id="@+id/add"
