Add new background for the buttons on the main screen

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,11 @@
     tools:context=".MainActivity"
     android:background="@drawable/farm">
 
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+    <Button
         android:id="@+id/factory_button"
+        app:backgroundTint="@null"
+        app:backgroundTintMode="add"
+        android:background="@drawable/signpost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
@@ -17,22 +20,28 @@
         android:layout_gravity="bottom"
         android:text="@string/factory"
         android:contentDescription="@string/factory_button_dsc">
-    </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>
+    </Button>
 
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+    <Button
         android:id="@+id/market_button"
+        app:backgroundTint="@null"
+        app:backgroundTintMode="add"
+        android:background="@drawable/signpost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="320dp"
+        android:layout_marginStart="340dp"
         android:layout_marginBottom="15dp"
         android:layout_gravity="bottom"
         android:text="@string/market"
         android:contentDescription="@string/market_button_dsc">
 
-    </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>
+    </Button>
 
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+    <Button
         android:id="@+id/speaking_button"
+        app:backgroundTint="@null"
+        app:backgroundTintMode="add"
+        android:background="@drawable/signpost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="15dp"
@@ -41,7 +50,7 @@
         android:text="@string/speaking"
         android:contentDescription="@string/speaking_button_dsc">
 
-    </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>
+    </Button>
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
