--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     <Button
         android:id="@+id/factory_button"
         app:backgroundTint="@null"
-        app:backgroundTintMode="add"
+        android:textColor="@color/white"
         android:background="@drawable/signpost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -25,7 +25,7 @@
     <Button
         android:id="@+id/market_button"
         app:backgroundTint="@null"
-        app:backgroundTintMode="add"
+        android:textColor="@color/white"
         android:background="@drawable/signpost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,7 +40,7 @@
     <Button
         android:id="@+id/speaking_button"
         app:backgroundTint="@null"
-        app:backgroundTintMode="add"
+        android:textColor="@color/white"
         android:background="@drawable/signpost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
