--- a/app/src/main/res/layout/activity_speaking_exercises1.xml
+++ b/app/src/main/res/layout/activity_speaking_exercises1.xml
@@ -23,8 +23,8 @@
             android:gravity="center"
             android:paddingBottom="30dp"
             android:paddingTop="50dp"
-            android:text="You have a message from Tony:"
-            android:textSize="20sp"
+            android:text="@string/you_have_a_message_from_tony"
+            android:textSize="15sp"
             app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
@@ -59,7 +59,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:paddingBottom="30dp"
-            android:text="What did Tony say in their language?"
+            android:text="@string/what_did_tony_say_in_their_language"
             android:textSize="20sp"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
@@ -80,7 +80,7 @@
             android:id="@+id/confirm_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Confirm"
+            android:text="@string/confirm"
             app:layout_constraintBottom_toBottomOf="parent" />
 
 
@@ -106,7 +106,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Tony said: ¿De dónde eres?"
+                android:text="@string/tony_said"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toTopOf="@+id/btn_continue"
                 app:layout_constraintTop_toBottomOf="@+id/result"
@@ -115,7 +115,7 @@
                 android:id="@+id/btn_continue"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Continue"
+                android:text="@string/continue_str"
                 app:layout_constraintBottom_toBottomOf="parent"
                />
 
