--- a/app/src/main/res/layout/activity_camp_fire.xml
+++ b/app/src/main/res/layout/activity_camp_fire.xml
@@ -8,4 +8,13 @@
     tools:context=".CampFire"
     android:background="@drawable/campfire">
 
+    <Button
+        android:id="@+id/start_exc"
+        android:layout_width="250dp"
+        android:layout_height="150dp"
+        android:layout_marginBottom="70dp"
+        android:text="@string/start_speaking_exercise"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
