--- a/app/src/main/res/layout/activity_speaking_exercises2.xml
+++ b/app/src/main/res/layout/activity_speaking_exercises2.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="50dp"
-        android:background="#c09154"
+        android:background="@color/campfire_ground"
         android:padding="20dp">
 
         <TextView
