--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="wood">#4f200f</color>
     <color name="campfire_ground">#c09154</color>
+    <color name="grass">#086f44</color>
 </resources>
