--- a/app/src/main/res/layout/activity_speaking_exercises2.xml
+++ b/app/src/main/res/layout/activity_speaking_exercises2.xml
@@ -134,6 +134,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/confirm"
+            android:backgroundTint="@color/grass"
             app:layout_constraintBottom_toBottomOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
