--- a/app/src/main/res/layout/activity_speaking_congrats_screen.xml
+++ b/app/src/main/res/layout/activity_speaking_congrats_screen.xml
@@ -21,6 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:textColor="@color/black"
             android:paddingTop="50dp"
             android:text="@string/congratulation"
             android:textSize="30sp"
@@ -28,6 +29,7 @@
 
         <TextView
             android:id="@+id/textView8"
+            android:textColor="@color/black"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -47,6 +49,7 @@
 
             <TextView
                 android:id="@+id/textView17"
+                android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/tony"
@@ -55,6 +58,7 @@
 
             <TextView
                 android:id="@+id/textView18"
+                android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/de_donde_eres"
@@ -63,6 +67,7 @@
 
             <TextView
                 android:id="@+id/textView19"
+                android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
@@ -72,6 +77,7 @@
 
             <TextView
                 android:id="@+id/textView20"
+                android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
@@ -86,6 +92,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/grass"
             android:text="@string/got_it"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
